--- a/porta.css
+++ b/porta.css
@@ -15,69 +15,71 @@ a{
     text-decoration: none;
 }
 
+
 /* Barra de navegacion para movil, tablet y pc */
 
-header{
-    background: var(--barra-color);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    max-height: 80px;
+input[type=checkbox]{
+    display: none;
 }
-.barra--item{
-    color: var(--nav-color);
-    font-size: 60px;
-    font-weight: 700;
+.barra-img{
+    width: 19%;
+    border-radius: 50%;
+    margin: 0;
+    margin-top: 10px;
+    margin-left: 5px;
+    margin-bottom: 10px;
+}
+.barra_busqueda{
+    display: flex;
+    background: var(--barra-color);
+}
+#barra-label{
     position: absolute;
     right: 10px;
+    color: var(--nav-color);
+    font-size: 2rem;
+    font-weight: 300;
 }
-.barra-check{
-    display: none;
-}
-.barra--nav{
+.barra-nav{
     display: none;
     position: absolute;
-    max-width: 500%;
-    min-width: 99.9vw;
-    max-height: 110vh;
-    top: 0;
+    background: white;
+    height: 100vh;
+    width: 100%;
     z-index: 100;
-    background-color: var(--barra-color);
+    flex-direction: column;
 }
-.barra-check:checked ~ .barra--nav{
+.check:checked ~ .barra-nav{
     display: flex;
 }
-.barra--img{
-    max-width: 100%;
-    width: 70px;
-    border-radius: 50%;
-    margin: 15px 20px;
+.barra_cerrar{
+    position: absolute;
+    right: 10px;
+    margin: 10px;
+    font-size: 1.9rem;
+    color: red;
 }
-.barra--item3 a{
+.barra-list{
+    display: flex;
+    list-style: none;
+    text-decoration: none;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+}
+.barra-list2{
+    display: flex;
+    gap: 2px;
+    margin-top: 180px;
+    align-items: center;
+    text-align: center;
+}
+.barra-list2 span{
+    color: var(--barbg-color);
+}
+.barra-list2 a{
     color: var(--bar-color);
 }
-.barra--item3{
-    color: var(--barbg-color);
-    display: flex;
-    flex-direction: column;
-    height: 40vh;
-    margin-left: 200px;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    bottom: 0;
-    margin-bottom: 0;
-    top: 6px
-}
-.close-menu{
-    position: absolute;
-    top: 20px;
-    right: 20px;
-    color: var(--nav-color);
-    font-size: 60px;
-    cursor: pointer;
-}
-
 /* main */
 
 .centro{
@@ -103,6 +105,8 @@ h1{
 h2{
     color: #FA1E1E;
     text-align: center;
+    margin-bottom: 0;
+    margin-top: 5px;
 }
 .card{
     margin-right: 20px;
@@ -122,8 +126,11 @@ h2{
     box-shadow: 0 35px 70px #171718, inset 0 -6px 10px #585858;
 }
 .card--item{
+    padding: none;
     text-align: left;
-    padding: 0 12px;
+    margin: 0;
+    margin-top: 6px;
+    margin-left: 4px;
 }
 .card2{
     margin-right: 20px;
@@ -138,7 +145,6 @@ h2{
     color: var(--text-color);
     margin: auto;
     margin-top: -50px;
-
 }
 .card2:hover{
     transform: rotate(0deg) scale(1) translateY(-15px) translateX(10px);
@@ -146,7 +152,34 @@ h2{
 }
 .card--item2{
     text-align: left;
-    padding: 0 12px;
+    margin-left: 4px;
+    margin-top: 7px;
+    line-height: 1.1;
+}
+.card3{
+    margin-right: 20px;
+    width: 270px;
+    height: 200px;
+    border-radius: 20px;
+    cursor: pointer;
+    transform: perspective(800px) rotateX(45deg) scale(0.7);
+    background: color-mix(in srgb, #FF6D1F 60%, #fff 50%);
+    box-shadow: 0 25px 50px #3B3B3B, inset 0 -4px 8px #A6A6A6;
+    transition: transform .5s ease, box-shadow .6s ease;
+    color: var(--text-color);
+    margin: auto;
+    margin-top: -50px;
+
+}
+.card3:hover{
+    transform: rotate(0deg) scale(1) translateY(-15px) translateX(10px);
+    box-shadow: 0 35px 70px #171718, inset 0 -6px 10px #585858;
+}
+.card--item3{
+    text-align: left;
+    margin-left: 4px;
+    margin-top: 7px;
+    line-height: 1.1;
 }
 
 /* colores generales */
@@ -154,17 +187,17 @@ h2{
 @property --barra-color{
     syntax: "<color>";
     inherits: false;
-    initial-value: color-mix(in srgb, #FF8533 90%, #fff 10%);
+    initial-value: #5989FF;
 }
 @property --text-color{
     syntax: "<color>";
     inherits: false;
-    initial-value: #9E9E9E;
+    initial-value: #3B3B3B;
 }
 @property --bar-color{
     syntax: "<color>";
     inherits: false;
-    initial-value: #47474f;
+    initial-value: #3B3B3B;
 }
 @property --barbg-color{
     syntax: "<color>";
@@ -181,8 +214,104 @@ h2{
     inherits: false;
     initial-value: #FF7542;
 }
+@property --ani-color-1{
+    syntax: "<color>";
+    inherits: false;
+    initial-value: #FFC421;
+}
+
+/* animaciones */
+
+@keyframes border-b {
+from{
+    border-bottom: var(--ani-color-1) solid 2px;
+    width: 10px;
+}
+to{
+    border-bottom: var(--ani-color-1) solid 2px;
+    width: 100px;
+}
+}
+
+@keyframes border-es {
+from{
+    border-bottom: var(--ani-color-1) solid 2px;
+    width: 10px;
+}
+to{
+    border-bottom: var(--ani-color-1) solid 2px;
+    width: 70px;
+}
+}
+
+@keyframes card {
+from{
+    background: #D10000;
+    color: var(--text-color);
+}
+to{
+    background: transparent;
+    color: #B6B6B6;
+}
+}
 
 @media screen and (min-width: 1283px) {
+
+#barra_busqueda{
+    background: var(--barra-color);
+    display: block;
+    position: sticky;
+    top: 0;
+    border-bottom: #000AD1 solid 3px;
+    box-shadow: 0 0 30px #1F1919;
+}
+#barra_cerrar{
+    display: none;
+}
+#barra-label{
+    display: none;
+}
+.barra-img{
+    border-radius: 50%;
+    width: 6rem;
+}
+#barra-nav{
+    display: block;
+    position: static;
+    height: 199.9px;
+    z-index: -1;
+    height: auto;
+    width: auto;
+    background: none;
+    justify-content: space-between;
+}
+.barra-list{
+    display: flex;
+    flex-direction: row;
+    height: auto;
+    width: auto;
+    margin-left: 640px;
+    gap: 120px;
+}
+.barra-list2{
+    display: flex;
+    gap: 3px;
+    margin-top: -100px;
+    align-items: center;
+    text-align: center;
+}
+.barra-list2:hover{
+    display: flex;
+    gap: 4px;
+    margin-top: -100px;
+    align-items: center;
+    text-align: center;
+    padding: 0;
+    animation: border-b 2s linear both;
+}
+.barra-ani-es:hover{
+    animation: border-es 2s forwards;
+}
 
     /* parte central */
 
@@ -194,11 +323,13 @@ h2{
     margin-left: 70px;
 }
 .centro--item2{
-    background: #FF4929;
+    background: #1A1515;
     margin-left: 0;
     height: 680px;
     margin-top: 20px;
     max-width: 900px;
+    border-bottom-right-radius: 10px;
+    border-top-right-radius: 10px;
 }
 .centro-img{
     max-width: 630px;
@@ -211,17 +342,22 @@ h2{
     margin-bottom: 0;
     margin-right: 0;
     transform: translateY(3);
+    margin-left: 130px;
 }
-h1{
-    color: #FA1E1E;
+.princi{
+    color: #B30000;
     text-align: center;
     font-family: fantasy;
     font-weight: 200;
-    margin-left: 340px;
+    margin-left: 310px;
 }
-h2{
-    color: #FA1E1E;
+.titu{
+    color: #B30000;
     text-align: center;
+    margin-bottom: 0;
+    margin-top: 5px;
+    font-size: 27px;
+    filter: none;
 }
 .card{
     margin-right: 20px;
@@ -230,20 +366,38 @@ h2{
     border-radius: 20px;
     cursor: pointer;
     transform: perspective(800px) rotateX(45deg) scale(0.7);
-    background: color-mix(in srgb, #FF6D1F 60%, #fff 50%);
-    box-shadow: 0 25px 50px #3B3B3B, inset 0 -4px 8px #A6A6A6;
+    background: #D10000;
+    box-shadow: 0 25px 50px #4AA1FF, inset 0 -4px 8px #2E8EFF;
     transition: transform .5s ease, box-shadow .6s ease;
     color: var(--text-color);
-    margin-top: 189.1px;
-    margin-left: -289.8px;
+    margin-top: 182px;
+    margin-left: -281.9px;
+    margin-right: 50px;
 }
 .card:hover{
     transform: rotate(0deg) scale(1) translateY(-10px) translateX(10px);
-    box-shadow: 0 35px 70px #171718, inset 0 -6px 10px #585858;
+    box-shadow: 0 35px 70px #1A82FF, inset 0 -6px 10px #2E8EFF;
+    animation: card 4s forwards;
 }
 .card--item{
     text-align: left;
-    padding: 0 12px;
+    line-height: 1.1;
+    margin-left: 5px;
+    margin-top: 7px;
+    margin-right: 0;
+    padding-left: 0;
+    margin-bottom: 3px;
+    filter: blur(4px);
+}
+.card--item:hover{
+    text-align: left;
+    line-height: 1.1;
+    margin-left: 5px;
+    margin-top: 7px;
+    margin-right: 0;
+    padding-left: 0;
+    margin-bottom: 3px;
+    filter: none;
 }
 .card2{
     width: 270px;
@@ -251,21 +405,68 @@ h2{
     border-radius: 20px;
     cursor: pointer;
     transform: perspective(800px) rotateX(45deg) scale(0.7);
-    background: color-mix(in srgb, #FF6D1F 60%, #fff 50%);
-    box-shadow: 0 25px 50px #3B3B3B, inset 0 -4px 8px #A6A6A6;
+    background: #D10000;
+    box-shadow: 0 25px 50px #4AA1FF, inset 0 -4px 8px #2E8EFF;
     transition: transform .5s ease, box-shadow .6s ease;
     color: var(--text-color);
-    margin-top: 290px;
+    margin-top: 340px;
     left: 1;
     margin-left: -540px;
 }
 .card2:hover{
     transform: rotate(0deg) scale(1) translateY(-15px) translateX(10px);
-    box-shadow: 0 35px 70px #171718, inset 0 -6px 10px #585858;
+    box-shadow: 0 35px 70px #1A82FF, inset 0 -6px 10px #2E8EFF;
+    animation: card 4s forwards;
 }
 .card--item2{
     text-align: left;
-    padding: 0 12px;
+    margin-left: 4px;
+    margin-top: 10px;
+    margin-bottom: 4px;
+    line-height: 1.1;
+    filter: blur(4px);
 }
-
+.card--item2:hover{
+    text-align: left;
+    margin-left: 4px;
+    margin-top: 10px;
+    margin-bottom: 4px;
+    line-height: 1.1;
+    filter: none;
+}
+.card3{
+    width: 270px;
+    height: 200px;
+    border-radius: 20px;
+    cursor: pointer;
+    transform: perspective(800px) rotateX(45deg) scale(0.7);
+    background: #D10000;
+    box-shadow: 0 25px 50px #4AA1FF, inset 0 -4px 8px #2E8EFF;
+    transition: transform .5s ease, box-shadow .6s ease;
+    color: var(--text-color);
+    margin-top: 340px;
+    left: 1;
+    margin-right: 180px;
+}
+.card3:hover{
+    transform: rotate(0deg) scale(1) translateY(-15px) translateX(10px);
+    box-shadow: 0 35px 70px #1A82FF, inset 0 -6px 10px #2E8EFF;
+    animation: card 4s forwards;
+}
+.card--item3{
+    text-align: left;
+    margin-left: 6px;
+    margin-top: 10px;
+    margin-bottom: 4px;
+    line-height: 1.1;
+    filter: blur(4px);
+}
+.card--item3:hover{
+    text-align: left;
+    margin-left: 6px;
+    margin-top: 10px;
+    margin-bottom: 4px;
+    line-height: 1.1;
+    filter: none;
+}
 }
